--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Iamkristian | Ideas & thoughts
 ---
-
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+{% for post in site.posts %}
+<h4><small>{{ post.date | date: "%Y.%m.%d" }}</small> <a href="{{ post.url }}">{{ post.title }}</a></h4>
+{% endfor %}
