--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Iamkristian | Ideas & thoughts
 ---
 {% for post in site.posts %}
-<h4><small>{{ post.date | date: "%Y.%m.%d" }}</small> <a href="{{ post.url }}">{{ post.title }}</a></h4>
+<h4><small>{{ post.date | date: "%Y.%m.%d" }}</small><br/><a href="{{ post.url }}">{{ post.title }}</a></h4>
 {% endfor %}
