--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: Iamkristian | Ideas & thoughts
 ---
+
 {% for post in site.posts %}
 <h4><small>{{ post.date | date: "%Y.%m.%d" }}</small><br/><a href="{{ post.url }}">{{ post.title }}</a></h4>
+<p>{{ post.excerpt }}
 {% endfor %}
