deploy: a09238a4ab58b9f92c068651f3d3bf7cf21f5038

--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,8 @@
 <meta property="og:title" content="About me" />
 <meta name="author" content="Kristian Rasmussen" />
 <meta property="og:locale" content="en_US" />
-<meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
-<meta property="og:description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
+<meta name="description" content="This should contain some nice description of what this is all about. Can’t say that I’m entirely sure, except fun, code and thoughts from me." />
+<meta property="og:description" content="This should contain some nice description of what this is all about. Can’t say that I’m entirely sure, except fun, code and thoughts from me." />
 <meta property="og:site_name" content="krx.io" />
 <meta property="og:image" content="/IMG_2142.png" />
 <meta property="og:type" content="website" />
@@ -17,7 +17,7 @@
 <meta property="twitter:image" content="/IMG_2142.png" />
 <meta property="twitter:title" content="About me" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Kristian Rasmussen"},"description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"About me","image":"/IMG_2142.png","name":"krx.io","url":"/about/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Kristian Rasmussen"},"description":"This should contain some nice description of what this is all about. Can’t say that I’m entirely sure, except fun, code and thoughts from me.","headline":"About me","image":"/IMG_2142.png","name":"krx.io","url":"/about/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="krx.io" />
 </head>
@@ -85,27 +85,27 @@ about 10-12 m/s, the waves are between 1-2.5 meters. Great fun!</p>
         </ul>
       </div>
       <div class="footer-col">
-        <p>Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
+        <p>This should contain some nice description of what this is all about. Can&#39;t say that I&#39;m entirely sure, except fun, code and thoughts from me.
 </p>
       </div>
     </div>
 
     <div class="social-links"><ul class="social-media-list"><li>
-  <a rel="me" href="https://github.com/jekyll/minima" target="_blank" title="github">
+  <a rel="me" href="https://github.com/iamkristian" target="_blank" title="github">
     <svg class="svg-icon grey">
       <use xlink:href="/assets/minima-social-icons.svg#github"></use>
     </svg>
   </a>
 </li>
 <li>
-  <a rel="me" href="https://www.instagram.com/jekyll" target="_blank" title="instagram">
+  <a rel="me" href="https://www.instagram.com/iamkristian" target="_blank" title="instagram">
     <svg class="svg-icon grey">
       <use xlink:href="/assets/minima-social-icons.svg#instagram"></use>
     </svg>
   </a>
 </li>
 <li>
-  <a rel="me" href="https://www.linkedin.com/in/jekyll" target="_blank" title="linkedin">
+  <a rel="me" href="https://www.linkedin.com/in/iamkristian" target="_blank" title="linkedin">
     <svg class="svg-icon grey">
       <use xlink:href="/assets/minima-social-icons.svg#linkedin"></use>
     </svg>
@@ -119,7 +119,7 @@ about 10-12 m/s, the waves are between 1-2.5 meters. Great fun!</p>
   </a>
 </li>
 <li>
-  <a rel="me" href="https://www.youtube.com/jekyll" target="_blank" title="rss">
+  <a rel="me" href="https://iamkristian.github.io/feed.xml" target="_blank" title="rss">
     <svg class="svg-icon grey">
       <use xlink:href="/assets/minima-social-icons.svg#rss"></use>
     </svg>
