deploy: 4763237fd461974735c2741214bd42c56e5b6f2e

--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
 {"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Kristian Rasmussen"},"description":"This should contain some nice description of what this is all about. Can’t say that I’m entirely sure, except fun, code and thoughts from me.","headline":"krx.io","url":"/404.html"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="krx.io" />
+<link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png"/>
 </head>
 <body><header class="site-header">
 
