--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 {"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Kristian Rasmussen"},"description":"This should contain some nice description of what this is all about. Can’t say that I’m entirely sure, except fun, code and thoughts from me.","headline":"Hi!","image":"/IMG_0142.png","name":"krx.io","url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="krx.io" />
+<link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png"/>
 </head>
 <body><header class="site-header">
 
