deploy: 8666367c8550ef392be712da3748fbd2b767d75e

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <p><a href="https://youtu.be/k1BneeJTDcU">Bo Burnham</a></p>
 </blockquote>
 
-<p>Starting of with Bo’ catchy tune the stage is set.</p>
+<p>Starting off with Bo’ catchy tune the stage is set.</p>
 
 
   </div>
