adding the right 404 page

--- a/404.html
+++ b/404.html
@@ -16,9 +16,9 @@ layout: default
   }
 </style>
 
+<img src="/assets/images/404.png" alt="Theese aren't the droids you're looking for"/>
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>The page is strong with this one... But not found :(</strong></p>
 </div>
