--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,8 @@
 <meta property="og:title" content="About me" />
 <meta name="author" content="Kristian Rasmussen" />
 <meta property="og:locale" content="en_US" />
-<meta name="description" content="This should contain some nice description of what this is all about. Can’t say that I’m entirely sure, except fun, code and thoughts from me." />
-<meta property="og:description" content="This should contain some nice description of what this is all about. Can’t say that I’m entirely sure, except fun, code and thoughts from me." />
+<meta name="description" content="I can’t promise any regular updates. I usually write when I’m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind." />
+<meta property="og:description" content="I can’t promise any regular updates. I usually write when I’m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind." />
 <meta property="og:site_name" content="krx.io" />
 <meta property="og:image" content="/IMG_2142.png" />
 <meta property="og:type" content="website" />
@@ -17,7 +17,7 @@
 <meta property="twitter:image" content="/IMG_2142.png" />
 <meta property="twitter:title" content="About me" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Kristian Rasmussen"},"description":"This should contain some nice description of what this is all about. Can’t say that I’m entirely sure, except fun, code and thoughts from me.","headline":"About me","image":"/IMG_2142.png","name":"krx.io","url":"/about/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Kristian Rasmussen"},"description":"I can’t promise any regular updates. I usually write when I’m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind.","headline":"About me","image":"/IMG_2142.png","name":"krx.io","url":"/about/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="krx.io" />
 <link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png"/>
@@ -80,13 +80,15 @@ about 10-12 m/s, the waves are between 1-2.5 meters. Great fun!</p>
             </svg><span>Subscribe</span>
           </a>
         </p>
+
+        <p>Don't be a stranger - Reach out on the mail below, if you want to say hi. - And I'll get back to you with an answer within a couple of days.</p>
         <ul class="contact-list">
           <li class="p-name">Kristian Rasmussen</li>
-          <li><a class="u-email" href="mailto:me@krx.io">me@krx.io</a></li>
+          <li><a class="u-email" href="mailto:me+blog@krx.io">me+blog@krx.io</a></li>
         </ul>
       </div>
       <div class="footer-col">
-        <p>This should contain some nice description of what this is all about. Can&#39;t say that I&#39;m entirely sure, except fun, code and thoughts from me.
+        <p>I can&#39;t promise any regular updates. I usually write when I&#39;m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind.
 </p>
       </div>
     </div>
