--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,8 @@
 <meta property="og:title" content="About me" />
 <meta name="author" content="Kristian Rasmussen" />
 <meta property="og:locale" content="en_US" />
-<meta name="description" content="I can’t promise any regular updates. I usually write when I’m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind." />
-<meta property="og:description" content="I can’t promise any regular updates. I usually write when I’m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind." />
+<meta name="description" content="I can promise absolute irregular updates. I usually write when I’m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind." />
+<meta property="og:description" content="I can promise absolute irregular updates. I usually write when I’m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind." />
 <meta property="og:site_name" content="krx.io" />
 <meta property="og:image" content="/IMG_2142.png" />
 <meta property="og:type" content="website" />
@@ -17,10 +17,10 @@
 <meta property="twitter:image" content="/IMG_2142.png" />
 <meta property="twitter:title" content="About me" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Kristian Rasmussen"},"description":"I can’t promise any regular updates. I usually write when I’m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind.","headline":"About me","image":"/IMG_2142.png","name":"krx.io","url":"/about/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Kristian Rasmussen"},"description":"I can promise absolute irregular updates. I usually write when I’m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind.","headline":"About me","image":"/IMG_2142.png","name":"krx.io","url":"/about/"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="krx.io" />
-<link rel="shortcut icon" type="image/x-icon" href="favicon-32x32.png"/>
+<link rel="shortcut icon" type="image/x-icon" href="/favicon-32x32.png"/>
 </head>
 <body><header class="site-header">
 
@@ -88,7 +88,7 @@ about 10-12 m/s, the waves are between 1-2.5 meters. Great fun!</p>
         </ul>
       </div>
       <div class="footer-col">
-        <p>I can&#39;t promise any regular updates. I usually write when I&#39;m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind.
+        <p>I can promise absolute irregular updates. I usually write when I&#39;m in the mood or have something exciting to share. Topics range from code - Ruby, Elixir, Javascript, thoughts and what else is on my mind.
 </p>
       </div>
     </div>
