--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="krx.io" />
 <link rel="shortcut icon" type="image/x-icon" href="/favicon-32x32.png"/>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1HT6KGZ2PZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1HT6KGZ2PZ');
+</script>
 </head>
 <body><header class="site-header">
 
