--- a/about/index.html
+++ b/about/index.html
@@ -131,7 +131,7 @@ about 10-12 m/s, the waves are between 1-2.5 meters. Great fun!</p>
   </a>
 </li>
 <li>
-  <a rel="me" href="https://iamkristian.github.io/feed.xml" target="_blank" title="rss">
+  <a rel="me" href="https://krx.io/feed.xml" target="_blank" title="rss">
     <svg class="svg-icon grey">
       <use xlink:href="/assets/minima-social-icons.svg#rss"></use>
     </svg>
