--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,7 @@
 walking too. Anyhow - I write and share code about ruby, elixir, UNIX
 and cloud. On this site, I share all the stuff that’s to technical for
 other places. Mostly in English and Danish.
-I earn a living writing code, facilitating as an Independent Consultant - Mostly in finance, media and insurance.</p>
+I earn a living writing code, facilitating as a Software Developer - Recently in finance, media and insurance. Now focusing on making the world a better place.</p>
 
 <p>Oh yeah - that’s me in the top photo - paddling in rough water. The wind is
 about 10-12 m/s, the waves are between 1-2.5 meters. Great fun!</p>
